--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,37 @@
 <div class="navigation col-lg-12">
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-light" style="background-color: #de3038;">
       <!-- Navbar content -->
       <div class="container-fluid">
 
-        <div class="navbar-header">
-          <a href="#" class="navbar-brand">{{title}}</a>
+        <div class="menu-horizontal">
+          <ul class="nav navbar">
+            <li>
+                <a href="#" class="navbar-brand">{{title}}</a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="fas fa-home"></span>
+                Inicio
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="fas fa-th-list"></span>
+                Timeline
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="fas fa-user"></span>
+                Gente
+              </a>
+            </li>
+          </ul>
         </div>
 
       </div>
     </nav>
 </div>
+
+<router-outlet></router-outlet>
 
