--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+/*General*/
+.h1-strong{
+  font-size: 35px;
+  font-weight: bold;
+  margin-left: 13px;
+  margin-bottom: 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.navigation{
+  padding: 0px !important;
+}
+
+.navigation .navbar{
+  border-radius: 0px !important;
+}
+.navigation .navbar *{
+  color: white;
+}
+.menu-horizontal ul li{
+  margin-right: 10px !important;
+}
+
