--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -1,1 +1,22 @@
-<h2>Bienvenido a login</h2>
+<div class="col-lg-5">
+  <h2 class="h1-strong">{{title}}</h2>
+  <form #loginForm="ngForm" (ngSubmit)="onSubmit()" class="col-lg-12">
+    <p>
+      <label for="">Correo Electronico</label>
+      <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email"
+      class="form-control" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+      <span *ngIf="!email.valid && email.touched">
+        El email no es correcto
+      </span>
+    </p>
+    <p>
+      <label for="">Contraseña</label>
+      <input type="email" name="password" #password="ngModel" [(ngModel)]="user.password"
+      class="form-control" required>
+      <span *ngIf="!password.valid && password.touched">
+        La contraseña es obligatoria
+      </span>
+    </p>
+    <input type="submit" value="Entrar" class="btn btn-success" [disabled]="!loginForm.form.valid">
+  </form>
+</div>
