--- a/src/styles.css
+++ b/src/styles.css
@@ -25,4 +25,8 @@
 .menu-horizontal ul li{
   margin-right: 10px !important;
 }
-
+.jumbotron{
+  margin: 25px;
+  border-radius: 5px;
+  text-align: center;
+}
