--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#">
+                <a class="nav-link disabled" [routerLink]="['/gente']" [routerLinkActive]="['active']">
                   <span class="fas fa-user"></span>
                   Gente
                 </a>
@@ -42,47 +42,33 @@
             <ul class="nav navbar-nav navbar-right" *ngIf="identity">
               <li class="avatar">
                 <!-- Cargar imagen de usuario-->
-              </li>
-              <li>
-                <!-- <a href="#" class="dropdown-toggle" type="button" data-toggle="menu">
-                  {{identity.name}} <span class="caret"></span>
-                </a>
-
-                <ul class="dropdown-menu" id="menu" *ngIf="identity">
-                  <li>
-                    <a href="#">
-                      <span class="fas fa-th-list"></span>
-                      Mi perfil
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <span class="fas fa-th-list"></span>
-                      Mi datos
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <span class="fas fa-th-list"></span>
-                      Cerrar sesion
-                    </a>
-                  </li>
-                </ul> -->
-
+                <img src="{{url+'get-image-user/'+identity.image}}" alt="imagen" *ngIf="identity && identity.image">
               </li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">
-                    Cuenta <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Mi Cuenta</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Cambiar Email</a></li>
-                    <li><a href="#">Cambiar Password</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Logout</a></li>
-                </ul>
-            </li>
+                  <a class="dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{identity.name}} <span class="caret"></span>
+                  </a>
+                    <ul class="dropdown-menu" id="menu" *ngIf="identity" style="color: #615858;">
+                      <li>
+                        <a href="#">
+                          <span class="fas fa-th-list"></span>
+                          Mi perfil
+                        </a>
+                      </li>
+                      <li>
+                        <a [routerLink]="['mis-datos']">
+                          <span class="fas fa-th-list"></span>
+                          Mi datos
+                        </a>
+                      </li>
+                      <li>
+                        <a class="pointer" (click)="logout()">
+                          <span class="fas fa-th-list"></span>
+                          Cerrar sesion
+                        </a>
+                      </li>
+                    </ul>
+              </li>
             </ul>
           </div>
     </nav>
