--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,7 @@
   width: 35px;
 }
 
+/* Gente */
 .item-user .image-user{
   width: 75px;
   height: 75px;
@@ -73,4 +74,24 @@
 .item-user .user-name .name-surname a{
   color: #444;
   font-weight: bold;
+}
+
+/* SIDEBAR */
+
+#user-card{
+  /* padding-top: 25px; */
+  /* widows: 80%; */
+}
+
+#user-card .avatar{
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  overflow: hidden;
+  margin-left: 5px;
+}
+
+#user-card .avatar img{
+  width: 100%;
+  height: 100%;
 }
