Finalizacion de la maquetacion de la tarjeta de gente

--- a/src/app/componets/sidebar/sidebar.component.html
+++ b/src/app/componets/sidebar/sidebar.component.html
@@ -10,9 +10,9 @@
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="name-surname pull-left">
+      <div class="name-surname">
         <b><a href="#">{{identity.name + ' ' + identity.surname}}</a></b>
-        <b><p>{{identity.nick}}</p></b>
+        <p class="nickname" >{{identity.nick}}</p>
       </div>
     </div>
   </div>
@@ -20,7 +20,7 @@
   <div class="stats" *ngIf="stats">
     <div class="following-data">
       <a href="#">
-        <span class="lavel-stats">
+        <span class="label-stats">
           Siguiendo
         </span>
         <span class="number-stats">
@@ -31,7 +31,7 @@
 
     <div class="following-data">
       <a href="#">
-        <span class="lavel-stats">
+        <span class="label-stats">
           Seguidores
         </span>
         <span class="number-stats">
@@ -42,7 +42,7 @@
 
     <div class="following-data">
       <a href="#">
-        <span class="lavel-stats">
+        <span class="label-stats">
           Publicaciones
         </span>
         <span class="number-stats">
@@ -52,4 +52,24 @@
     </div>
 
   </div>
+</div>
+
+<!-- FORMULARIO DE PUBLICACIONES -->
+<div id="new-publication" class="col-lg-12 card" style="margin-top:10px;">
+  <form #newPubForm="ngForm" (ngSubmit)="onSubmit()" class="col-lg-10">
+    <p>
+      <label>¿Que estas pensando hoy?</label>
+      <textarea name="text" #text="ngModel" [(ngModel)]="publication.text"
+      class="form-control" required>
+      <span *ngIf="!text.valid && text.touched">
+        El texto de la publicacion es obligatorio
+      </span>
+    </textarea>
+    </p>
+    <p>
+      <label>Sube tu foto</label>
+      <input type="file" placeholder="Subir imagen">
+    </p>
+    <input type="submit" value="Enviar" class="btn btn-success" [disabled]="!newPubForm.form.valid">
+  </form>
 </div>
