final del timeline y úblicaciones

--- a/src/app/componets/sidebar/sidebar.component.html
+++ b/src/app/componets/sidebar/sidebar.component.html
@@ -1,3 +1,4 @@
+<div class="pull-left">
 <div>
   <h1 class="h1-strong">Hola, {{identity.name}}</h1>
 </div>
@@ -53,10 +54,17 @@
 
   </div>
 </div>
+</div>
 
 <!-- FORMULARIO DE PUBLICACIONES -->
 <div id="new-publication" class="col-lg-12 card" style="margin-top:10px;">
-  <form #newPubForm="ngForm" (ngSubmit)="onSubmit()" class="col-lg-10">
+  <div class="alert alert-success" *ngIf="status=='success'">
+    Publicación enviada correctamente
+  </div>
+  <div class="alert alert-success" *ngIf="status=='error'">
+    Publicación no enviada
+  </div>
+  <form #newPubForm="ngForm" (ngSubmit)="onSubmit(newPubForm); sendPublication($event)" class="col-lg-10">
     <p>
       <label>¿Que estas pensando hoy?</label>
       <textarea name="text" #text="ngModel" [(ngModel)]="publication.text"
