--- a/src/app/componets/timeline/timeline/timeline.component.html
+++ b/src/app/componets/timeline/timeline/timeline.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-8">
     <h1 class="h1-strong">
       {{title}}
-      <button class="btn btn-succes btn-sm" (click)="refresh($event)">Mostrar nuevas</button>
+      <button class="btn btn-success btn-sm" (click)="refresh($event)">Mostrar nuevas</button>
     </h1>
 
     <div id="publications">
