--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,8 @@
 
 .item-user .image-user img,
 .item_publication .image-user img{
-  width: 80px;
+  width: 75px;
+  height: 75px;
 }
 
 .item-user .user-name{
@@ -140,10 +141,64 @@
 
 /*TIMELINE*/
 
-/* #publications{
+#publications{
   min-height: 500px;
-} */
+}
 
 #publications .date{
   color: grey;
 }
+
+/*PERFILES*/
+#data-profile{
+  min-height: 500px;
+  text-align: left;
+}
+
+#data-profile .avatar{
+  width: 180px;
+  height: 180px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-right: 15px;
+}
+
+#data-profile .avatar img{
+  width: 100%;
+  height: 100%;
+}
+#data-profile .user-name{
+  margin-top: 15px;
+}
+
+#data-profile .user-name .name{
+  font-size: 25px;
+  font-weight: bold;
+  color: #555;
+}
+
+#data-profile .user-name .nick{
+  font-size: 25px;
+  font-weight: normal;
+  color: #555;
+}
+
+#data-profile .stats{
+  border-left: 4px solid gray;
+  margin-left: 20px;
+  padding-left: 20px;
+  height: 180px;
+
+}
+
+#data-profile .stats a{
+  font-size: 20px;
+  line-height: 30px;
+  color: #555;
+}
+
+#data-profile .publications{
+  margin-top: 40px;
+}
+
+
