--- a/src/app/componets/profile/profile.component.html
+++ b/src/app/componets/profile/profile.component.html
@@ -1,7 +1,85 @@
 <div class="row">
   <div class="col-lg-8">
     <h1 class="h1-strong">{{title}}</h1>
+
+    <div id="data-profile" *ngIf="user">
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="avatar">
+            <img src="{{url + 'get-image-user/'+ user.image}}" alt="Imagen" *ngIf="user.image">
+            <img src="../../../../assets/users.png" alt="Imagen" *ngIf="!user.image">
+          </div>
+        </div>
+
+        <div class="col-lg-3">
+          <div class="user-name">
+            <div class="follow">
+                <label class="label label-primary" *ngIf="followed" style="background: gray">Te Sigue</label>
+            </div>
+            <p class="name">{{user.name + ' '+ user.surname}}</p>
+            <p class="nick">{{user.nick}}</p>
+            <button class="btn btn-success btn-sm" *ngIf="!following" (click)="followUser(user._id)">Seguir</button>
+            <button class="btn btn-primary btn-sm" *ngIf="following"
+              (click)="unfollowUser(user._id)"
+              (mouseenter)="mouseEnter(user._id)"
+              (mouseleave)="mouseLeave()"
+              [class.btn-danger]="user._id == followUserOver">
+              <span *ngIf="user._id == followUserOver; else following">
+                  Dejar de seguir
+              </span>
+              <ng-template #following>
+                Siguiendo
+              </ng-template>
+            </button>
+          </div>
+        </div>
+
+        <!--ESTADISTICAS DE USUARIO-->
+        <div class="col-lg-3">
+          <div class="stats" *ngIf="stats">
+              <div class="following-data">
+                <a href="#">
+                  <span class="label-stats">
+                    Siguiendo
+                  </span>
+                  <span class="number-stats">
+                    {{stats.following}}
+                  </span>
+                </a>
+              </div>
+
+              <div class="following-data">
+                <a href="#">
+                  <span class="label-stats">
+                    Seguidores
+                  </span>
+                  <span class="number-stats">
+                    {{stats.followed}}
+                  </span>
+                </a>
+              </div>
+
+              <div class="following-data">
+                <a href="#">
+                  <span class="label-stats">
+                    Publicaciones
+                  </span>
+                  <span class="number-stats">
+                    {{stats.publications}}
+                  </span>
+                </a>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-lg-12 publications" *ngIf="user">
+          <app-publications [user]="user._id"></app-publications>
+        </div>
+
+      </div>
+    </div>
   </div>
+
   <div class="col-lg-4" style="float: right;">
     <app-sidebar></app-sidebar>
   </div>
