--- a/src/app/componets/sidebar/sidebar.component.html
+++ b/src/app/componets/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
 
   <div class="stats" *ngIf="stats">
     <div class="following-data">
-      <a href="#">
+      <a [routerLink]="['/siguiendo',identity._id,1]">
         <span class="label-stats">
           Siguiendo
         </span>
@@ -68,7 +68,7 @@
   <div class="alert alert-success" *ngIf="status=='error'">
     Publicación no enviada
   </div>
-  <form #newPubForm="ngForm" (ngSubmit)="onSubmit(newPubForm); sendPublication($event)" class="col-lg-10">
+  <form #newPubForm="ngForm" (ngSubmit)="onSubmit(newPubForm,$event)" class="col-lg-10">
     <p>
       <label>¿Que estas pensando hoy?</label>
       <textarea name="text" #text="ngModel" [(ngModel)]="publication.text"
