--- a/src/app/componets/timeline/timeline/timeline.component.html
+++ b/src/app/componets/timeline/timeline/timeline.component.html
@@ -25,13 +25,54 @@
                 <span class="date">{{(publication.created_at | amFromUnix) |amLocale:'es' |amTimeAgo}}</span>
                 <h6 class="publication-text">{{publication.text}}</h6>
               </div>
-              <div class="col-lg-12" *ngIf="publication.file != 'null'">
-                <button class="btn btn-warning" (click)="showThisImage(publication._id)"
-                  [class.btn-danger]="showImage == publication._id" style="float: right">
+              <div class="col-lg-12">
+                <div class="" *ngIf="publication.user._id == identity._id">
+                  <!-- Button trigger modal -->
+                  <a href="#mymodal{{publication._id}}" role="button" class="btn btn-danger" data-toggle="modal"
+                  style="float: right" *ngIf="showImage != publication._id">
+                    <span class="fas fa-trash-alt"></span>
+                  </a>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="mymodal{{publication._id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                      aria-hidden="true">
+                      <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">¿Seguro que quieres borrar la publicacion?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Si la borra no podra recuperarla</p>
+                            <p>{{publication.text}}</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                            <button type="button" class="btn btn-primary" (click)="deletePublication(publication._id)"
+                            data-dismiss="modal">
+                              Borrar publicacion
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+                <div class="" *ngIf="publication.file != 'null'" style="float: right;margin-right: 5px;">
+                    <button class="btn btn-warning" (click)="showThisImage(publication._id)"
+                    *ngIf="showImage != publication._id" style="float: right">
                     <span class="fas fa-image"></span>
-                </button>
+                  </button>
+                  <button class="btn btn-danger" (click)="hideThisImage(publication._id)"
+                  *ngIf="showImage == publication._id" style="float: right; margin-right: 5px;">
+                      <span class="fas fa-image"></span>
+                  </button>
+                </div>
               </div>
+
               <div class="col-lg-12" *ngIf="publication.file != 'null' && showImage == publication._id">
+                <br>
                 <img src="{{url + 'get-image-pub/'+publication.file}}" class="col-lg-12" alt="Imagen">
               </div>
 
