Creacion del componente followed

--- a/src/app/componets/following/following.component.html
+++ b/src/app/componets/following/following.component.html
@@ -1,44 +1,44 @@
 <div class="row">
     <div class="col-lg-8">
-      <h1 class="h1-strong">{{title}}</h1>
-      <div class="people">
+      <h1 class="h1-strong">{{title}} {{user.name}}</h1>
+      <div class="people" *ngIf="following">
 
         <!-- LISTADO -->
-        <!-- <div *ngFor="let user of users" class="item-user">
+        <div *ngFor="let follow of following" class="item-user">
           <div class="card">
             <div class="card-body">
               <div class="row">
                 <div class="col-md-2">
                   <div class="image-user pull-left">
                     <a href="#">
-                      <img src="{{url + 'get-image-user/'+user.image}}" alt="Imagen" *ngIf="user.image">
-                      <img src="../../../../assets/users.png" alt="Imagen" *ngIf="!user.image">
+                      <img src="{{url + 'get-image-user/'+ follow.followed.image }}" alt="Imagen" *ngIf="follow.followed.image">
+                      <img src="../../../../assets/users.png" alt="Imagen" *ngIf="!follow.followed.image">
                     </a>
                   </div>
                 </div>
                 <div class="col-md-7">
                   <div class="user-name pull-left">
                     <p class="name-surname">
-                      <a [routerLink]="['/perfil',user._id]">
-                        {{user.name + ' ' + user.surname}}
+                      <a [routerLink]="['/perfil',follow.followed._id]">
+                        {{follow.followed.name + ' ' + follow.followed.surname}}
                       </a>
                     </p>
-                    <p class="nickname">{{user.nick}}</p>
+                    <p class="nickname">{{follow.followed.nick}}</p>
                   </div>
                 </div>
-                SEGUIR/DEJAR DE SEGUIR -->
-                <!--<div *ngIf="user._id != identity._id">
-                  <button class="btn btn-success" *ngIf="follows.indexOf(user._id) < 0"
-                  (click)="followUser(user._id)">
+                <!-- SEGUIR/DEJAR DE SEGUIR -->
+                <div *ngIf="follow.followed._id != identity._id">
+                  <button class="btn btn-success" *ngIf="follows.indexOf(follow.followed._id) < 0"
+                  (click)="followUser(follow.followed._id)">
                       <i class="fa fa-plus-circle"></i>
                     Seguir
                   </button>
-                  <button class="btn btn-primary" *ngIf="follows.indexOf(user._id) >= 0"
-                    (mouseenter)="mouseEnter(user._id)"
-                    (mouseleave)="mouseLeave(user._id)"
-                    (click)="unfollowUser(user._id)"
-                    [class.btn-danger]="user._id == followUserOver">
-                    <span *ngIf="user._id == followUserOver; else following">
+                  <button class="btn btn-primary" *ngIf="follows.indexOf(follow.followed._id) >= 0"
+                    (mouseenter)="mouseEnter(follow.followed._id)"
+                    (mouseleave)="mouseLeave(follow.followed._id)"
+                    (click)="unfollowUser(follow.followed._id)"
+                    [class.btn-danger]="follow.followed._id == followUserOver">
+                    <span *ngIf="follow.followed._id == followUserOver; else following">
                       <i class="fa fa-minus-circle"></i>Dejar de seguir
                     </span>
                     <ng-template #following>
@@ -50,12 +50,12 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <br>
         <!-- PAGINACION -->
         <ul class="pagination pull-right">
-          <li *ngIf="page > 1"><a type="button" class="btn btn-default btn-sm" [routerLink]="['/gente',prev_page]">Anterior</a></li>
-          <li *ngIf="pages != page"><a type="button" class="btn btn-default btn-sm" [routerLink]="['/gente',next_page]">Siguiente</a></li>
+          <li *ngIf="page > 1"><a type="button" class="btn btn-default btn-sm" [routerLink]="['/siguiendo',userPageId,prev_page]">Anterior</a></li>
+          <li *ngIf="pages != page"><a type="button" class="btn btn-default btn-sm" [routerLink]="['/siguiendo',userPageId,next_page]">Siguiente</a></li>
         </ul>
 
       </div>
