--- a/src/app/componets/profile/profile.component.html
+++ b/src/app/componets/profile/profile.component.html
@@ -38,7 +38,7 @@
         <div class="col-lg-3">
           <div class="stats" *ngIf="stats">
               <div class="following-data">
-                <a href="#">
+                <a [routerLink]="['/siguiendo',user._id,1]">
                   <span class="label-stats">
                     Siguiendo
                   </span>
@@ -49,7 +49,7 @@
               </div>
 
               <div class="following-data">
-                <a href="#">
+                <a [routerLink]="['/seguidores',user._id,1]">
                   <span class="label-stats">
                     Seguidores
                   </span>
