--- a/src/app/componets/sidebar/sidebar.component.html
+++ b/src/app/componets/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="following-data">
-      <a href="#">
+        <a [routerLink]="['/seguidores',identity._id,1]">
         <span class="label-stats">
           Seguidores
         </span>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="following-data">
-      <a href="#">
+      <a [routerLink]="['/perfil',identity._id]">
         <span class="label-stats">
           Publicaciones
         </span>
