--- a/src/app/componets/register/register.component.html
+++ b/src/app/componets/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-5">
   <h2 class="h1-strong">{{title}}</h2>
   <div class="alert alert-success" *ngIf="estatus == 'success' " >
-    <a [routerLink]="['login']">Idetificate aqui</a>
+    <a [routerLink]="['/login']">Idetificate aqui</a>
     Registro completado correctamente
   </div>
   <div class="alert alert-danger" *ngIf="estatus == 'error' " >
