--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,12 @@
                   Gente
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" [routerLink]="['/mensajes']" [routerLinkActive]="['active']">
+                  <span class="fas fa-envelope"></span>
+                  Mensajes
+                </a>
+              </li>
             </ul>
             <form class="form-inline my-lg-0">
                 <ul class="nav navbar navbar-nav navbar-right" *ngIf="!identity">
