--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -3,9 +3,9 @@
       <h1>{{title}}</h1>
       <p>Disfruta de las publicaciones de tus amigos y comparte tu vida</p>
       <p>
-        <a href="#" class="btn btn-success btn-lg" role="button">Mi perfil</a>
-        <a href="#" class="btn btn-primary btn-lg" role="button">Timeline</a>
-        <a href="#" class="btn btn-info btn-lg" role="button">Gente</a>
+        <a [routerLink]="['/perfil',identity._id]" class="btn btn-success btn-lg" role="button">Mi perfil</a>
+        <a [routerLink]="['/timeline']" class="btn btn-primary btn-lg" role="button">Timeline</a>
+        <a [routerLink]="['/gente']" class="btn btn-info btn-lg" role="button">Gente</a>
       </p>
   </div>
 </div>
