--- a/src/app/messages/components/main/main.component.html
+++ b/src/app/messages/components/main/main.component.html
@@ -1,3 +1,26 @@
-<p>
-  main works!
-</p>
+<div class="row">
+  <div class="col-lg-4">
+    <h3>{{title}}</h3>
+    <div>
+      <ul class="list-group">
+        <li class="list-group-item" role="presentation" [routerLinkActive]="['active']">
+          <a [routerLink]="['enviar']">Enviar mensaje</a>
+        </li>
+        <li class="list-group-item" role="presentation" [routerLinkActive]="['active']">
+          <a [routerLink]="['recibidos']">Mensajes recibidos</a>
+        </li>
+        <li class="list-group-item" role="presentation" [routerLinkActive]="['active']">
+          <a [routerLink]="['enviados']">Mensajes enviados</a>
+        </li>
+        <li class="list-group-item" role="presentation">
+          <a [routerLink]="['/home']">Informacion</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="col-lg-8">
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
